# moos-ivp-lhscaldas

./: README  README.md
.svn/: wc.db
missions/DP/: DPcalib.py  MoosReader.py  NACMM_2021.p3d  Navio_L15B4_Conv.p3d  PSV4500.p3d  behaviorDP.bhv  behaviorDP.moos  dp.sh  fullDP.moos  iDP.py  iManualDP.py  iPydyna.py  inhousedp.py  main.moos  manualDP.moos  pTrajectPID.py  teste.ipynb  teste.py  teste2.py  testeLog.txt
missions/DP/.ipynb_checkpoints/: teste-checkpoint.ipynb
missions/EKF/: Alocacao_leme_DP.docx  EKF.ipynb  JKT.txt  eq.ipynb  eq_final.ipynb  equacionamento_old.ipynb  modelo_EKF.ipynb  modelo_forças.ipynb  modelo_navio.ipynb  navio.py
missions/EKF/.ipynb_checkpoints/: eq-checkpoint.ipynb
missions/EKF/moos/: alfa.moos  alfa.moos++  iPydyna2.py  launch.sh  pEKF.py  pEKF1.py  pEKF2.py  pEKF3.py  pTrajectPID.py  teste.py
missions/EKF/moos/Log/: Log (conflicted 1).slog  Log (conflicted 2).slog  Log (conflicted 3).slog  Log (conflicted) (conflicted).slog  Log (conflicted).alog  Log (conflicted).slog  Log._moos  Log.slog  Log.ylog  alfa._bhv
missions/FT fit/: PID_Pydyna_test.py  ROT_FT_FIT.py  SPEED_FT_FIT.py
missions/Interface/: .LastOpenedMOOSLogDirectory  GA.ipynb  Genetic_Algorithm.py  NACMM_2021.p3d  alfa.bhv  alfa.moos  alfa.moos++  bravo.moos  bravo.moos++  charlie.moos  charlie.moos++  iPydyna2.py  launch.sh  main.bhv  main.moos  main.py  model_mothership.moos  model_ship.moos  modelo.bhv  modelo.moos  moos.py  mothership.moos  mothership.moos++  pTrajectPID.py
missions/Interface/Log/: Log._moos  Log.alog  Log.slog  Log.ylog
missions/Interface/UML/: casos de uso.drawio
missions/Interface/old/: GA.ipynb  GA_small.py  GA_test copy.ipynb  GA_test.ipynb  GA_tutorialpy  Genetic_Algorithm_old.py  main copy.py  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main8.py  test_dots.py  test_latlong.py  test_matrix.py  test_reader.py  tutorial_GA.ipynb
missions/Interface/old/Nonograms/: main.py
missions/Interface/old/tutorial tkinter/: button.py  helloworld.py  tklabel.py
missions/PID/: iPydyna.py  main.bhv  main.moos  pTrajectPID.py
missions/PIDcalib/: PID_calib.py  PID_test.py  alfa.bhv  alfa.moos  alfa.moos++  iPydyna2.py  p3d-03.11.p3d  pTrajectPID.py  postProcessing.py
missions/PIDcalib/Log/: Log._moos  Log.alog  Log.slog  Log.ylog  alfa._bhv  alfa_polygon._bhv
missions/alder/: alder_orig.bhv
missions/iRemote/: iPydyna.py  main.moos
missions/iTPN/: .LastOpenedMOOSLogDirectory  TPNserver.py  alfa.bhv  alfa.moos  alfa.moos++  alfa2.bhv  bravo.bhv  bravo.moos  bravo.moos++  client.py  iSHM.py  iSMH.py  iSMH2.py  iTPN.py  launch.sh  mothership.moos  mothership.moos++  pTrajectPID.py  server.py
missions/inHouseDP_study/: Maersk Handler.p3d  pydyna_001.ipynb  requirements.txt
missions/inHouseDP_study/matlab_tools_1_13_0/: DP4py.bat  changelog.md  install.txt
missions/lab8/: alpha.moos  alpha.moos++  apples.moos  bravo.bhv  bravo.moos  bravo.moos++  launch.sh  pears.moos  shoreside.moos  shoreside.moos++
missions/lab8/lab_08_henry_gilda_baseline/: .LastOpenedMOOSLogDirectory  launch.sh  targ_gilda.moos  targ_henry.moos  targ_shoreside.moos
missions/lab8/lab_08_henry_gilda_baseline/LOG_GILDA_22_9_2021_____14_05_10/: LOG_GILDA_22_9_2021_____14_05_10._moos  LOG_GILDA_22_9_2021_____14_05_10.alog  LOG_GILDA_22_9_2021_____14_05_10.ylog
missions/lab8/lab_08_henry_gilda_baseline/LOG_GILDA_22_9_2021_____14_10_04/: LOG_GILDA_22_9_2021_____14_10_04._moos  LOG_GILDA_22_9_2021_____14_10_04.ylog
missions/lab8/lab_08_henry_gilda_baseline/LOG_GILDA_22_9_2021_____14_19_02/: LOG_GILDA_22_9_2021_____14_19_02._moos  LOG_GILDA_22_9_2021_____14_19_02.ylog
missions/lab8/m2_berta_bcm/: launch.sh  meta_shoreside.moos  meta_vehicle.moos  targ_gilda.bhv  targ_gilda.moos  targ_henry.bhv  targ_henry.moos  targ_shoreside.moos
missions/plotter/: alpha.moos
missions/sensores_2/: LogReader.py  iPydyna.py  main.bhv  main.moos  pTrajectPID.py  postProcessing.py  teste_MoosReader.py
missions/sensores_2/MOOSLog_24_6_2021_____16_56_42/: MOOSLog_24_6_2021_____16_56_42._moos  MOOSLog_24_6_2021_____16_56_42.alog  MOOSLog_24_6_2021_____16_56_42.slog  MOOSLog_24_6_2021_____16_56_42.ylog
missions/sensores_c/: main.moos  pSimDVL.py  pSimIMU.py  pTrajectPID.py
missions/sensores_py/: iPydyna.py  main.moos  pSimGPS.py  pTrajectPID.py
missions/shoreside/: .LastOpenedMOOSLogDirectory  alfa.bhv  alfa.moos  alfa.moos++  alfa_backup.bhv  bravo.bhv  bravo.moos  bravo.moos++  charlie.bhv  charlie.moos  charlie.moos++  delta.bhv  delta.moos  delta.moos++  echo.bhv  echo.moos  echo.moos++  iPydyna.py  launch.sh  mothership.moos  mothership.moos++  postProcessing.py  shoreside.moos  shoreside.moos++
missions/shoreside/Log/: Log._moos  Log.alog  Log.slog  Log.ylog  alfa._bhv
src/: CMakeLists.txt
src/DP/: BHV_RStationKeep.sublime-workspace
src/backup/pSimDVL/: CMakeLists.txt  SimDVL.cpp  SimDVL.h  SimDVL_Info.cpp  pSimDVL.moos
src/backup/pSimGPS/: SimGPS_Info.h
src/backup/pSimGyro/: SimGyro.cpp  SimGyro_Info.h
src/backup/pSimIMU/: SimIMU.cpp  SimIMU.h  SimIMU_Info.cpp  pSimIMU.moos
src/iRemoteMod/: CMakeLists.txt  MOOSRemoteMod.cpp  iRemoteModMain.cpp
src/lib_behaviors-test/: AOF_DP.cpp  AOF_DP.h  BHV_DP.cpp  BHV_DP.h  BHV_DP2.cpp  BHV_DP2.h  CMakeLists.txt
src/pContactMgrMod/: CMakeLists.txt  ContactMgrV20.cpp  ContactMgrV20.h
src/pSensor/: CMakeLists.txt  Sensor.cpp  Sensor.h  Sensor_Info.cpp  Sensor_Info.h  main.cpp  pSensor.moos
src/pSimDVL/: SimDVL.cpp  SimDVL.h  SimDVL_Info.h  main.cpp
src/pSimGPS/: CMakeLists.txt  SimGPS.cpp  SimGPS.h  SimGPS_Info.cpp  main.cpp
src/pSimGyro/: CMakeLists.txt  SimGyro.h  SimGyro_Info.cpp  main.cpp  pSimGyro.moos
src/pSimIMU/: CMakeLists.txt  SimIMU.cpp  SimIMU.h  SimIMU_Info.h  main.cpp
src/pTrajectPID/: CMakeLists.txt  TrajectPID.cpp  TrajectPID.h  TrajectPID_Info.cpp  TrajectPID_Info.h  main.cpp  pTrajectPID.moos
src/uSimLidar/: USL_App_HP.cpp
src/uSimRadar/: CMakeLists.txt  USR_App_HP.cpp
src/uSimRadarV2/: CMakeLists.txt  USR_App_HP.cpp
(+22 files in other folders)
